# igvc-2012

./: .gitignore  README
CoordsConversion/: coords.py  coords.txt  course1.txt  course2.txt  gps.csv  gps1.csv  gps2.csv  practice.csv  practice.txt
Presentation/: Stark_Presentation_2012.odp
ReCo/: .project  AndroidManifest.xml  ReCo.apk
ReCo/res/layout/: config.xml  connect.xml  main.xml
ReCo/res/menu/: main.xml
ReCo/res/values/: strings.xml
bird/: CMakeLists.txt  mainpage.dox  manifest.xml
bird/data/: Distortion.xml  H.xml  Intrinsics.xml
bird/launch/: bird.launch  test.launch
bird/src/: bird_xform.cpp
inverse_perspective_mapper/: ipm.launch  manifest.xml
inverse_perspective_mapper/.svn/: entries
inverse_perspective_mapper/.svn/text-base/: ipm.launch.svn-base  mainpage.dox.svn-base
inverse_perspective_mapper/nodes/: ipm_node.py
inverse_perspective_mapper/nodes/.svn/: entries
inverse_perspective_mapper/params/: calibration_ps3eye.yaml  calibration_ps3eye_left.yaml  transform_map.yaml
jaus_interface/: CMakeLists.txt  mainpage.dox  manifest.xml
jaus_interface/src/: LocalWaypointListDriver.h  SetLocalPoseCallback.h  jaus.cpp  listener.cpp  talker.cpp
jaus_judge_sim/: Makefile  cgranz_Final_Paper.doc  judge.cpp
kec_line/: CMakeLists.txt  mainpage.dox  manifest.xml
kec_line/launch/: kec_line.launch  raycast.launch  test.launch
kec_line/nodes/: camera_driver.py  display.py
kec_line/src/: c_lines.cpp  raycast.cpp
navi2/: CMakeLists.txt  laserMap.yaml  mainpage.dox  manifest.xml  navi2.yaml  noInflationMap.yaml  qual.wps  sim.wps  wideLaserMap.yaml
navi2/launch/: real.launch  realNoVis.launch  realPracWps.launch  realQualLine.launch  realQualWps.launch  sim.launch  simQualLine.launch  simQualWps.launch  simRecorder.launch
navi2/nodes/: pathFilter.py  woah.py
navi2/src/: demo.cpp  laserMapper.cpp  mapMerger.cpp  navi2.cpp  pathfinder.cpp  pathfinder.hpp  qualLine.cpp  qualWps.cpp  tendrils.cpp  transformHelper.cpp  transformHelper.hpp  utmRecorder.cpp  woahMerger.cpp
ocean_driver/: mainpage.dox  manifest.xml
ocean_driver/launch/: compass.launch
ocean_driver/nodes/: osdriver.py
ocean_driver/udev/: 60-compass.rules  compassINFO.txt
reco_server/: hostapd.conf  mainpage.dox  manifest.xml  start_wireless.sh  test_client.py  udhcpd.conf
reco_server/nodes/: reco_server.py
reco_server/src/: woah.py
stark_driver/: CMakeLists.txt  mainpage.dox  manifest.xml
stark_driver/include/: Timer.hh  croak.hh  fsleep.hh  qc_serial.hh
stark_driver/launch/: camera.launch  lidar.launch  motor_driver.launch  pose_stark.launch  stark_all.launch  stark_frames.launch  stereo_cameras.launch
stark_driver/msg/: EncoderStamped.msg
stark_driver/src/compass/: PhidgetCompass.cc  PhidgetCompass.hh  calibrate.cc  compass_node.cc  test_compass.cc
stark_driver/src/motor/: MotorController.cc  MotorController.hh  MotorDriver.cc  MotorDriver.hh  encoder_test.cc  light_test.cc  motor_driver.cc  motor_test.cc  thread_fsleep.hh
stark_driver/src/pose/: CalcUTM.hh  GpsProxy.cc  GpsProxy.hh  gps_test.cc  llutm.hh  pose_driver.cc  robot_ekf.cpp  robot_ekf.hpp
stark_driver/src/qc/: qc_serial.cc
stark_driver/udev/: 65-robot.rules  75-robot.rules  gps_script  nongps_script  rc.local
stark_frames/: CMakeLists.txt  frames.gv  mainpage.dox  manifest.xml
stark_frames/nodes/: base_frame.py  frames.gv  gps_to_map.py  kalman.py  map_frame.py  map_to_gps.py  odom_frame.py  odom_to_base_link.py
stark_frames/src/: mapToOdom.cpp  mapToOdomDead.cpp
uml_igvc_gazebo/: CMakeLists.txt  mainpage.dox  manifest.xml
uml_igvc_gazebo/include/: diffdrive_quad.hh
uml_igvc_gazebo/launch/: nav1.launch
uml_igvc_gazebo/src/: diffdrive_quad.cc
uml_igvc_stage/: README  manifest.xml
uml_igvc_stage/launch/: aut1.launch  nav1.launch
uml_igvc_stage/share/: aut1.world  common.inc  nav1.world
uml_sim_gps/: CMakeLists.txt  mainpage.dox  manifest.xml
uml_sim_gps/nodes/: sim_gps.py
uml_sim_gps/src/: gpsStageTransformer.cpp  gps_gazebo.py  gps_stage.py
utm_sample_code/: CalcUTM.cc  Makefile  alex_test.cc  ll2utm.py  llutm.cc  proj_test.cc
woah_scheme/: CMakeLists.txt  mainpage.dox  manifest.xml
woah_scheme/include/woah_scheme/: transform.hh
woah_scheme/src/: transform.cc  woah.scm  woah_scheme.cc
(+26 files in other folders)
